# mtt_workspace

./: .dockerignore  .gitignore  .gitmodules  README.md  TESTING_GUIDE.md  USAGE_EXAMPLES.md  compose.yaml  mtt_core.md  mtt_doc  mtt_driver.py  notes.txt  test_mtt_ros_driver.sh
.devcontainer/: Dockerfile  devcontainer.json  on_create.bash  on_update.bash
.github/workflows/: build.yml
configs/offline_mapping/: priority_research_bags.txt
demos/: README.md
demos/bag_replay/: README.md  compose.yaml
demos/common/: README.md
demos/data_collection/: README.md  compose.yaml  mtt_dashboard.json
demos/description/: compose.yaml
demos/live_robot/: README.md  compose.yaml  mtt_dashboard.json
demos/monitor/: README.md  compose.yaml
demos/simulation/: README.md  compose.yaml
dependencies/: robot.repos
doc/: README.md  dev_commands.md  runtime_sensor_audit.md  workspace_architecture.md
docker/: Dockerfile  Dockerfile.base  build.yaml  common.yaml  foxglove_bridge.yaml  ros_entrypoint.sh  ros_setup.sh
docs/: motion_model_research_pipeline.md
documentations/: CANBus_Specification.md  CURRENT_ARCHITECTURE.md  MTT_CAN_v1_1_simple.dbc  README.md  README_CAN.md  mttDriver.dbc  mtt_driver_architecture.drawio
mtt_bringup/launch/: mtt_bringup.launch.py
mtt_bringup/mtt_bringup/: mtt_controller_interface.py
mtt_description/launch/: mtt_description.launch.py
mtt_description/urdf/: robot.sdf  robot_no_collision.urdf.xacro
mtt_description/worlds/: template.world
mtt_driver/: CMakeLists.txt  README.md  setup.py
mtt_driver/config/: mtt_config.yaml  twist_mux.yaml
mtt_driver/launch/: README.md  mtt.launch.py  mtt_composable_system.launch.py
mtt_driver/mtt_driver/: mtt_odometry_manager.py  mtt_ros_wrapper.py  mtt_teleop_joy.py  mtt_vehicle_params.py  teleop_joy.py
mtt_driver/scripts/: mode_test_node.py  mtt_cmd_tachometer_sim.py  mtt_test_high_freq.py
mtt_driver/test/: test_cmd_smoother_timeout_launch.py
mtt_interfaces/: CMakeLists.txt
mtt_interfaces/srv/: SetLightStateSrv.srv  SetVehiculeTypeSrv.srv
mtt_model/the_mtt_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mtt_model/the_mtt_bringup/config/: control.yaml  controller.yaml  joystick.yaml
mtt_model/the_mtt_bringup/launch/: controller_config.launch.py  joystick.launch.py  tracked_gazebo.launch.xml  wheel_group.launch.py  wheel_group_publisher.py  yaw_steer.py  yaw_steering.launch.py
mtt_model/the_mtt_bringup/urdf/: robot.urdf.xacro
mtt_model/the_mtt_bringup/worlds/: empty.world  test.world
mtt_model/the_mtt_description/: CMakeLists.txt  package.xml
mtt_msgs/: CMakeLists.txt
mtt_test_tools/offline_mockserver/: CMakeLists.txt  README.md  build_mtt_mock.sh  monitor_can.sh
mtt_ws/: .gitignore  branch_diff_fix-winch-race-condition.txt  start_mtt_high_freq.sh
mtt_ws/log_mtt_09-07-2025_driver_init_bad_RF_base_reference/: log_detail.txt
mtt_ws/src/mtt_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mtt_ws/src/mtt_bringup/launch/: mtt_bringup.launch.py  mtt_controller.launch.py  mtt_simulation.launch.py  mtt_teleop_controller.launch.py  spawn_mtt.launch.py
mtt_ws/src/mtt_bringup/mtt_bringup/: ground_truth_odom_tf_broadcaster.py  mtt_controller_interface.py  mtt_joy_mapper.py  odom_publisher_simul.py  scan_frame_remapper.py
mtt_ws/src/mtt_driver/: CMakeLists.txt  DRIVER_INIT_TEST.md  README.md  README_STANDALONE_TEST.md  package.xml  requirements.txt  setup.cfg  setup.py
mtt_ws/src/mtt_driver/config/: 8BitDo_ultimate_wireless.yaml  logitech_dual_action.yaml  logitech_gamepad_310_mapper.yaml  mtt_config.yaml  twist_mux.yaml
mtt_ws/src/mtt_driver/launch/: README.md  mtt_canbus.launch.py  mtt_driver_init_test.launch.py  mtt_teleop.launch.py
mtt_ws/src/mtt_driver/launch/development/: mtt_canbus.launch.py
mtt_ws/src/mtt_driver/launch/production/: mtt_composable_system.launch.py  mtt_driver_simulation.launch.py  mtt_teleop.launch.py
mtt_ws/src/mtt_driver/launch/tests/: mtt_driver_init_test.launch.py  mtt_driver_standalone_test.launch.py  mtt_full_test.launch.py  mtt_test.launch.py
mtt_ws/src/mtt_driver/msg/: MttAuxCommand.msg  MttTachometerData.msg
mtt_ws/src/mtt_driver/mtt_driver/: mtt_articulated_model.py  mtt_cmd_smoother.py  mtt_driver.py  mtt_joint_controller.py  mtt_odometry_manager.py  mtt_odometry_node.py  mtt_ros_wrapper.py  mtt_teleop_joy.py  mtt_test_node.py  teleop_cmd_smoother.py
mtt_ws/src/mtt_driver/scripts/: mtt_cmd_tachometer_sim.py  mtt_driver_cli.py  mtt_fake_tachometer.py  quick_test.sh  test_driver_init.py  test_driving_mode_integration.py  test_real_world_behavior.py
mtt_ws/src/mtt_driver/test/: conftest.py  test_cmd_smoother_timeout.py  test_cmd_smoother_timeout_launch.py
scripts/: align_route_to_pose.py  analyze_imu_bias.py  analyze_temps.py  annotate_session.sh  audit_bag_timing.py  audit_bag_topics.py  audit_control_safety.py  audit_icp_health.py  audit_imu_deep.py  audit_live_mapping_bag.py  audit_live_topics.py  audit_network_field.sh  audit_offline_icp_run.py  audit_postprocess_dataset.py  audit_tf_chain.py  autosync_ws  build_canonical_mapping_dataset.py  build_direct_mapping_dataset.py  build_postprocess_dataset.py  calibrate_static_bag.py  check_bags.py  check_icp_odom.py  compile  configure_cl86ec_pdos.py  create_env  create_ws  direct_offline_icp.py  evaluate_wiln_readiness.py  event_mark.sh  export_gps_by_bag.py  export_icp_route_to_ltr.py  extract_lidar_frame.py  field_doodle_check.sh  field_ready_check.py  fit_motion_model_from_bags.py  icp_map_quality_check.py  install_host.sh  internet_via_usb  investigate_icp_mapping.py  mtt_brake_cycle.py  (+29 more)
scripts/lib/: mtt_env.sh
src/mtt_description/: package.xml
(+126 files in other folders)
