<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtt_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 driver for MTT-154 vehicle</description>
  <maintainer email="alex.chorel-campanozzi@ecn.forces.gc.ca">admassistant</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3-pyinotify</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-can</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mtt_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



  